--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 DATABASE_URL = <DATABASE_URL>
 OWM_API_KEY = <OPEN WEATHER MAP API KEY>
+SECRET_MESSAGE = <Random_message>
+EXPIRY_TIME = <Expiry time>
