--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bluebird": "^3.7.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.13.0",
     "pg-promise": "^10.11.1"
   }
 }
